# Brainiax

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  script.sh  settings-ollama.yaml  settings.yaml  setup  venv_conf.py
brainiax/: __init__.py  __main__.py  di.py  launcher.py  main.py  paths.py
brainiax/components/embedding/: embedding_component.py
brainiax/components/ingest/: ingest_component.py
brainiax/components/llm/: llm_component.py
brainiax/components/node_store/: node_store_component.py
brainiax/components/vector_store/: vector_store_component.py
brainiax/frontend/: __init__.py  ui.py
brainiax/open_ai/: openai_models.py
brainiax/server/chat/: __init__.py  chat_router.py  chat_service.py
brainiax/server/chunks/: chunks_service.py
brainiax/server/embeddings/: embeddings_router.py  embeddings_service.py
brainiax/server/ingest/: ingest_router.py  ingest_service.py  model.py
brainiax/server/utils/: auth.py
brainiax/settings/: settings.py  settings_loader.py
local_data/brainiax/: docstore.json  index_store.json
local_data/brainiax/qdrant/collection/make_this_parameterizable_per_api_call/: storage.sqlite
